--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <button class="cadastro"> <i class="bi bi-key"></i>Login</button>
             <nav>
-                <a href="../marcas/marcas.html">
+                <a href="./marcas/marcas.html">
                     <button><i class="bi bi-tag-fill"></i>Marcas</button>
                 </a>
                 <button><i class="bi bi-card-heading"></i>Artigos</button>
